[package]
name = "privacy-cash"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Nova Shield <team@nshield.org>"]
description = "Pure Rust SDK for Privacy Cash - Privacy-preserving transactions on Solana using Zero-Knowledge Proofs. iOS compatible, no Node.js required."
license = "MIT"
repository = "https://github.com/NovaShieldWallet/privacy-cash-rust-sdk"
documentation = "https://docs.rs/privacy-cash"
homepage = "https://nshield.org"
readme = "README.md"
keywords = ["solana", "privacy", "zk-proofs", "cryptocurrency", "ios"]
categories = ["cryptography", "api-bindings", "finance"]
include = [
    "src/**/*",
    "examples/**/*",
    "vendor/ark-circom-0.1.0/**/*",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[lib]
name = "privacy_cash"
path = "src/lib.rs"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "check_balance"
path = "examples/check_balance.rs"

[[example]]
name = "send_privately"
path = "examples/send_privately.rs"

[dependencies]
# Solana dependencies - using 2.x
solana-sdk = "2.0"
solana-client = "2.0"
spl-token = "6.0"
spl-associated-token-account = "4.0"

# Encryption
aes-gcm = "0.10"
aes = "0.8"
ctr = "0.9"
sha2 = "0.10"
sha3 = "0.10"
hmac = "0.12"
rand = "0.8"

# Big integers
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.5"
bs58 = "0.5"
hex = "0.4"
base64 = "0.22"
bincode = "1.3"

# Async runtime
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Utilities
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.19"
parking_lot = "0.12"

# Cryptography - ark-ff 0.4.x for Solana SDK compatibility
ark-bn254 = "0.4"
ark-ff = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
ark-ec = "0.4"
ark-crypto-primitives = "0.4"

# Patched ark-circom - uses ark-ff 0.4.x for Solana SDK compatibility
# Local path for development, git for publishing
ark-circom = { path = "vendor/ark-circom-0.1.0", features = ["circom-2"] }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
